# nighttime-streetlight-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml  requirements.txt
src/evaluation/: README.md  pyproject.toml  requirements.txt
src/evaluation/eval_pres/: __init__.py  __main__.py  aggregator.py  artifact_utils.py  audit_config.py  clean.py  cli.py  detection_tracking_artifacts.py  doctor.py  io.py  location_prior.py  measurement.py  measurement_artifacts.py  metrics.py  plots.py  report_generator.py  run_audit.py  run_metadata.py  schemas.py  video_demo.py  video_utils.py
src/evaluation/sample_videos/: busy_street_20260220_200501_629_1min.json
src/evaluation/tests/: test_eval_pres.py
src/measurement/: BUNDLE_FILE_INVENTORY.csv  README_BUNDLE.md  __init__.py  __main__.py  measurement_llm_annotation_workflow.md  package-lock.json  pipeline.py  pyproject.toml
src/measurement/attribution/: __init__.py  counterfactual.py  torch_model.py
src/measurement/cli/: __init__.py  check_readiness.py  evaluate.py  main.py  measure_batch.py  measure_clip.py  prepare_annotations.py  prepare_dataset.py  pseudo_manifest.py  train_joint.py  train_module.py
src/measurement/config/: __init__.py  paths.py
src/measurement/contracts/: __init__.py  calibration_policy.py  input_schema.py  module_io.py  output_schema.py
src/measurement/dataset_prep/: __init__.py  converter.py  normalization.py
src/measurement/decomposition/: __init__.py  source_slots.py  task_supervised_decomposition.py  torch_models.py
src/measurement/features/: __init__.py  (+7 more)
(+224 files in other folders)
