[project]
name = "eval-pres"
version = "0.1.0"
description = "Presentation-grade RBCCPS streetlight pipeline evaluator"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "opencv-python>=4.8",
  "Pillow>=10.0",
  "pytest>=7.0",
  "scikit-learn>=1.3",
  "ultralytics>=8.0",
]

[project.scripts]
eval-pres = "eval_pres.__main__:main"

[tool.pytest.ini_options]
pythonpath = ["."]
